--- a/index.html
+++ b/index.html
@@ -125,6 +125,10 @@
 		<p>Made with <i class="fa fa-heart" aria-hidden="true"></i> by Laboratoria</p>
 		<small>Desarrollado por Caterina Da Silva</small>
 </footer>
+<div id="work-services-modal" class="hidden">
+	<div class="modal-body"></div>
+	<div id="close"></div>
+</div>
 <script type="text/javascript" src="assets/js/app.js"></script>
 </body>
 </html>
